# source-analyzer

./: .gitignore  .pdm-python  alembic.ini  article-673376.html  pyproject.toml
src/: app.py  chat.py  main.py  processor.py  rag.py  utils.py
src/backend/: analysis.py  analysis_api.py  analysis_dao.py  app.py  article_dao.py  auth.py  dao.py  database.py  import_api.py  main.py  rag.py  session_dao.py  user_dao.py
src/backend/analysis/: analysis_api.py  analysis_dao.py
src/backend/auth/: auth_api.py  session_dao.py
src/backend/dao/: article_dao.py  base.py
src/backend/database/: database.py  models.py
src/backend/document/: document_api.py  document_dao.py
src/backend/feed/: feed_api.py  feed_dao.py
src/backend/new_analysis/: feed_api.py
src/backend/text_analysis/: models.py  чистка.sql
src/crawler/: processor.py  rss_crawler.py
src/frontend/: middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/components/: auth-buttons.tsx  file-uploader.tsx  impact-timeline.tsx  language-provider.tsx  language-switcher.tsx  markup-editor.tsx  source-classification.tsx  source-summary.tsx  source-table.tsx  source-visualizations.tsx  template-editor.tsx  templates-select.tsx  theme-mode-toggle.tsx  theme-toggle.tsx  word-cloud-visualization.tsx  yandex.tsx
src/frontend/hooks/: use-auth.ts  use-schedules.ts  use-templates.ts
src/frontend/lib/: api.ts
src/migration/: env.py
src/models/: chatml_dataset.jsonl  models.py  train.ipynb  training_data.json
src/rag/: processor.py  rag.py  templates.py
(+43 files in other folders)
