[project]
name = "source-analyzer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MatashiHa", email = "maestr0o.mario@yandex.ru"},
]
dependencies = ["scrapy>=2.12.0", "feedparser>=6.0.11", "streamlit>=1.43.2", "sqlalchemy>=2.0.39", "dotenv>=0.9.9", "fastapi>=0.115.11", "alembic>=1.15.1", "asyncpg>=0.30.0", "tqdm>=4.67.1", "aiohttp>=3.11.14", "mmh3>=5.1.0", "delorean>=1.0.0", "beautifulsoup4>=4.13.3", "lxml>=5.3.1", "pgvector>=0.4.0", "mlflow>=2.21.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
