[project]
name = "source-analyzer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MatashiHa", email = "maestr0o.mario@yandex.ru"},
]
dependencies = ["scrapy>=2.12.0", "feedparser>=6.0.11", "sqlalchemy>=2.0.39", "dotenv>=0.9.9", "fastapi>=0.115.11", "alembic>=1.15.1", "asyncpg>=0.30.0", "tqdm>=4.67.1", "aiohttp>=3.11.14", "mmh3>=5.1.0", "delorean>=1.0.0", "beautifulsoup4>=4.13.3", "lxml>=5.3.1", "pgvector>=0.4.0", "uvicorn>=0.34.0", "httpx>=0.28.1", "pandas>=2.2.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]  # This is optional dependencies
mlstuff = [
    "mlflow>=2.21.0",
    "transformers>=4.50.0",
    "torch>=2.6.0",
    "bitsandbytes>=0.45.4",
    "accelerate>=1.5.2",
]
dev = [
    "label-studio>=1.17.0",
    "pip>=25.0.1",
]


[tool.pdm]
distribution = false
